--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,14 +40,14 @@
 
     <!-- load scratchcard -->
     <script type="text/javascript" src="scratchcard.js"></script>
-
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJHJ36K1YQ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ERLPF60ZDD"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-CJHJ36K1YQ');
+
+      gtag('config', 'G-ERLPF60ZDD');
     </script>
   </head>
 
