--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,14 +18,14 @@
     <meta property="og:url" content="https://scratcher.verse.bitcoin.com">
     <meta property="og:title" content="Scratch & Win: On-Chain Scratch Tickets Powered by Verse">
     <meta property="og:description" content="Purchase and play on-chain scratch tickets with instant results and immediate prize claims.">
-    <meta property="og:image" content="https://scratcher.verse.bitcoin.com/meta.png">
+    <meta property="og:image" content="https://scratcher.verse.bitcoin.com/meta_lunar.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://scratcher.verse.bitcoin.com">
     <meta property="twitter:title" content="Scratch & Win: On-Chain Scratch Tickets Powered by Verse">
     <meta property="twitter:description" content="Purchase and play on-chain scratch tickets with instant results and immediate prize claims.">
-    <meta property="twitter:image" content="https://scratcher.verse.bitcoin.com/meta.png">
+    <meta property="twitter:image" content="https://scratcher.verse.bitcoin.com/meta_lunar.png">
   
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
